@@ -3,89 +3,137 @@ package org.devkor.apu.saerok_server.domain.notification.application;
 import lombok.RequiredArgsConstructor;
 import org.devkor.apu.saerok_server.domain.notification.application.dto.*;
 import org.devkor.apu.saerok_server.domain.notification.core.entity.DeviceToken;
+import org.devkor.apu.saerok_server.domain.notification.core.entity.NotificationSettings;
+import org.devkor.apu.saerok_server.domain.notification.core.entity.NotificationType;
 import org.devkor.apu.saerok_server.domain.notification.core.repository.DeviceTokenRepository;
-
+import org.devkor.apu.saerok_server.domain.notification.core.repository.NotificationSettingsRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class PushNotificationService {
 
+    private static final Logger log = LoggerFactory.getLogger(PushNotificationService.class);
+
     private final FcmMessageService fcmMessageService;
     private final DeviceTokenRepository deviceTokenRepository;
+    private final NotificationSettingsRepository notificationSettingsRepository;
 
     @Async("pushNotificationExecutor")
-    public void sendToUser(SendPushToUserCommand command) {
-        List<DeviceToken> deviceTokens = deviceTokenRepository
-                .findActiveTokensByUserId(command.userId());
+    public void sendToUser(Long userId, NotificationType notificationType, PushMessageCommand message) {
+        List<NotificationSettings> settings = notificationSettingsRepository
+                .findByUserIdWithNotificationEnabled(userId, notificationType);
 
-        if (deviceTokens.isEmpty()) {
+        if (settings.isEmpty()) {
             return;
         }
 
-        List<String> fcmTokens = deviceTokens.stream()
+        List<String> expectedDeviceIds = settings.stream()
+                .map(NotificationSettings::getDeviceId)
+                .toList();
+
+        List<DeviceToken> foundDeviceTokens = deviceTokenRepository.findByUserIdAndDeviceIds(userId, expectedDeviceIds);
+
+        // 데이터 정합성 체크 및 로깅
+        if (foundDeviceTokens.size() != expectedDeviceIds.size()) {
+            List<String> foundDeviceIds = foundDeviceTokens.stream()
+                    .map(DeviceToken::getDeviceId)
+                    .toList();
+            List<String> missingDeviceIds = expectedDeviceIds.stream()
+                    .filter(id -> !foundDeviceIds.contains(id))
+                    .toList();
+            log.warn("데이터 불일치 발견: userId={}의 deviceId={}에 대한 DeviceToken이 존재하지 않습니다.", userId, missingDeviceIds);
+        }
+
+        if (foundDeviceTokens.isEmpty()) {
+            return;
+        }
+
+        List<String> fcmTokens = foundDeviceTokens.stream()
                 .map(DeviceToken::getToken)
                 .toList();
 
-        fcmMessageService.sendToDevices(fcmTokens, command.message());
+        fcmMessageService.sendToDevices(fcmTokens, message);
     }
 
     @Async("pushNotificationExecutor")
     public void sendBroadcast(SendBroadcastPushCommand command) {
-        List<DeviceToken> deviceTokens = deviceTokenRepository.findAllActiveTokens();
-        
-        if (deviceTokens.isEmpty()) {
+        List<NotificationSettings> settings = notificationSettingsRepository
+                .findSettingsWithNotificationEnabled(NotificationType.SYSTEM);
+
+        if (settings.isEmpty()) {
             return;
         }
-        
-        List<String> fcmTokens = deviceTokens.stream()
-                .map(DeviceToken::getToken)
-                .toList();
-        
-        fcmMessageService.sendToDevices(fcmTokens, command.message());
+
+        Map<Long, List<String>> userDeviceMap = settings.stream()
+                .collect(Collectors.groupingBy(
+                        s -> s.getUser().getId(),
+                        Collectors.mapping(NotificationSettings::getDeviceId, Collectors.toList())
+                ));
+
+        userDeviceMap.forEach((userId, deviceIds) -> {
+            List<DeviceToken> deviceTokens = deviceTokenRepository.findByUserIdAndDeviceIds(userId, deviceIds);
+            if (!deviceTokens.isEmpty()) {
+                List<String> fcmTokens = deviceTokens.stream().map(DeviceToken::getToken).toList();
+                fcmMessageService.sendToDevices(fcmTokens, command.message());
+            }
+        });
     }
 
     public void sendCollectionLikeNotification(Long targetUserId, String likerNickname, Long collectionId) {
+        if (notificationSettingsRepository.findByUserIdWithNotificationEnabled(targetUserId, NotificationType.LIKE).isEmpty()) {
+            return;
+        }
+
         Map<String, String> data = Map.of(
                 "collectionId", collectionId.toString(),
                 "userId", targetUserId.toString()
         );
         
         PushMessageCommand message = PushMessageCommand.createWithData(
-                "새로운 좋아요를 받았어요!",
-                likerNickname + "님이 회원님의 컬렉션에 좋아요를 남겼어요.",
+                likerNickname,
+                "나의 새록을 좋아해요",
                 "COLLECTION_LIKE",
                 data
         );
 
-        SendPushToUserCommand command = new SendPushToUserCommand(targetUserId, message);
-        sendToUser(command);
+        sendToUser(targetUserId, NotificationType.LIKE, message);
     }
 
-    public void sendCollectionCommentNotification(Long targetUserId, String commenterNickname, Long collectionId) {
+    public void sendCollectionCommentNotification(Long targetUserId, String commenterNickname, Long collectionId, String commentContent) {
+        if (notificationSettingsRepository.findByUserIdWithNotificationEnabled(targetUserId, NotificationType.COMMENT).isEmpty()) {
+            return;
+        }
+
         Map<String, String> data = Map.of(
                 "collectionId", collectionId.toString(),
                 "userId", targetUserId.toString()
         );
-        
+
         PushMessageCommand message = PushMessageCommand.createWithData(
-                "새로운 댓글이에요!",
-                commenterNickname + "님이 회원님의 컬렉션에 댓글을 남겼어요.",
+                commenterNickname,
+                "나의 새록에 댓글을 남겼어요. \"" + commentContent + "\"",
                 "COLLECTION_COMMENT",
                 data
         );
 
-        SendPushToUserCommand command = new SendPushToUserCommand(targetUserId, message);
-        sendToUser(command);
+        sendToUser(targetUserId, NotificationType.COMMENT, message);
     }
 
     public void sendBirdIdSuggestionNotification(Long targetUserId, String suggesterNickname, Long collectionId, String birdName) {
+        if (notificationSettingsRepository.findByUserIdWithNotificationEnabled(targetUserId, NotificationType.BIRD_ID_SUGGESTION).isEmpty()) {
+            return;
+        }
+
         Map<String, String> data = Map.of(
                 "collectionId", collectionId.toString(),
                 "userId", targetUserId.toString(),
@@ -93,15 +141,12 @@ public class PushNotificationService {
         );
         
         PushMessageCommand message = PushMessageCommand.createWithData(
-                "새로운 동정 의견이에요!",
-                suggesterNickname + "님이 '" + birdName + "'로 제안했어요.",
+                "동정 의견 공유",
+                "두근두근! 새로운 의견이 공유됐어요. 확인해볼까요?",
                 "BIRD_ID_SUGGESTION",
                 data
         );
 
-        SendPushToUserCommand command = new SendPushToUserCommand(targetUserId, message);
-        sendToUser(command);
+        sendToUser(targetUserId, NotificationType.BIRD_ID_SUGGESTION, message);
     }
-
-
 }
